name:                   number-length
version:                0.1.0.0
synopsis:               Number length in decimal and hexadecimal representation.
-- description:            TODO
homepage:               https://github.com/trskop/number-length
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2015, Peter Trško
category:               Data
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:     ChangeLog.md, README.md

flag pedantic
  description:          Pass additional warning flags to GHC.
  default:              False
  manual:               True

library
  hs-source-dirs:       src
  exposed-modules:
      Data.Int.Length
    , Data.NumberLength
    , Data.Word.Length
  -- other-modules:

  default-language:     Haskell2010
  other-extensions:     NoImplicitPrelude

  build-depends:        base >=4.5 && <4.9

  ghc-options:          -Wall -fwarn-tabs

  if flag(pedantic)
    ghc-options:
      -fwarn-implicit-prelude
      -fwarn-missing-import-lists
--    -Werror

test-suite unit-tests
  hs-source-dirs:       src, test
  type:                 exitcode-stdio-1.0
  main-is:              unit-tests.hs
  other-modules:
      TestCase
    , TestCase.Data.Int.Length
    , TestCase.Data.NumberLength
    , TestCase.Data.Word.Length

  default-language:     Haskell2010
  other-extensions:     NoImplicitPrelude

  build-depends:
      base >=4.5 && <4.9

    -- {{{ Test-suite dependencies --------------------------------------------
    , HUnit >=1.2 && <2
      -- ^ Same constraints as test-framework-hunit
    , QuickCheck >=2.6 && <2.7
    , test-framework >=0.8 && <1
      -- ^ Same constraint as test-framework-skip, other packages that
      -- depend on it have less restrictive bounds.
    , test-framework-hunit >=0.2.6 && <1
      -- ^ Lower versions have more restrictive bounds on test-framework.
    , test-framework-quickcheck2 >=0.3
      -- ^ There were changes in QuickCheck bounds in 0.2 branch and last one
      -- on it had a compilation failure on Hackage.
    -- }}} Test-suite dependencies --------------------------------------------

  ghc-options:          -Wall -fwarn-tabs

  if flag(pedantic)
    ghc-options:
      -fwarn-implicit-prelude
      -fwarn-missing-import-lists
--    -Werror
